[gd_scene load_steps=9 format=3 uid="uid://dtgrffx40e8om"]

[ext_resource type="Script" path="res://DialogueBoxManager.gd" id="1_51lka"]
[ext_resource type="Texture2D" uid="uid://t3tug4fs0fmd" path="res://Assets/Sprites/Dialogue/DialogueBox.png" id="1_squvk"]
[ext_resource type="PackedScene" uid="uid://bse2tjxj1hbof" path="res://Portrait.tscn" id="2_2fd4b"]
[ext_resource type="Texture2D" uid="uid://b7s73ijfnlfw0" path="res://Assets/Characters/Dirr/Dirr_Portrait.png" id="3_nww06"]
[ext_resource type="PackedScene" uid="uid://b5b55y61ec1q5" path="res://Dialogue_Text.tscn" id="4_kd3aw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d50on"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wt746"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tnd7d"]

[node name="DialogueBoxHolder" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_51lka")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_d50on")

[node name="TopDialogue" type="NinePatchRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.05
anchor_right = 0.8
anchor_bottom = 0.35
texture = ExtResource("1_squvk")

[node name="HorizontalContainer" type="HBoxContainer" parent="Panel/TopDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Portrait" type="Panel" parent="Panel/TopDialogue/HorizontalContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_styles/panel = SubResource("StyleBoxEmpty_wt746")

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/TopDialogue/HorizontalContainer/Portrait"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 0.92
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="Panel" parent="Panel/TopDialogue/HorizontalContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_tnd7d")

[node name="BottomDialogue" type="NinePatchRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.65
anchor_right = 0.8
anchor_bottom = 0.95
texture = ExtResource("1_squvk")

[node name="HorizontalContainer" type="HBoxContainer" parent="Panel/BottomDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PortraitHolder" type="Panel" parent="Panel/BottomDialogue/HorizontalContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_styles/panel = SubResource("StyleBoxEmpty_wt746")

[node name="Portrait" parent="Panel/BottomDialogue/HorizontalContainer/PortraitHolder" instance=ExtResource("2_2fd4b")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0881459
anchor_top = 0.0740741
anchor_right = 0.975684
anchor_bottom = 0.916667
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
portrait_texture = ExtResource("3_nww06")
metadata/_edit_use_anchors_ = true

[node name="TextHolder" type="Panel" parent="Panel/BottomDialogue/HorizontalContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_tnd7d")

[node name="DialogueText" parent="Panel/BottomDialogue/HorizontalContainer/TextHolder" instance=ExtResource("4_kd3aw")]
layout_mode = 2
anchor_left = -0.009
anchor_top = 0.104914
anchor_right = 0.96243
anchor_bottom = 0.950333
offset_left = 0.407
offset_top = 0.00799942
offset_right = -0.0800171
offset_bottom = 0.09198
metadata/_edit_use_anchors_ = true
